accessor for step error in templating values
Signed-off-by: Pablo Pérez Schröder <2639770+nomonamo@users.noreply.github.com>

--- a/engine/templates_tests/simple.yaml
+++ b/engine/templates_tests/simple.yaml
@@ -17,3 +17,11 @@ steps:
 			configuration:
 				output:
 					foo: baz
+	stepThree:
+		description: third step, fails
+		dependencies: [stepTwo]
+		action:
+			type: echo
+			configuration:
+				error_message: FAIL!
+				
