--- a/hack/Dockerfile-child
+++ b/hack/Dockerfile-child
@@ -1,10 +1,10 @@
-FROM ovhcom/utask:v1.0.1 AS builder
+FROM ovhcom/utask:DOCKER_TAG AS builder
 
 COPY .  /go/src/github.com/ovh/utask
 WORKDIR /go/src/github.com/ovh/utask
 RUN make
 
-FROM ovhcom/utask:v1.0.1
+FROM ovhcom/utask:DOCKER_TAG
 
 COPY templates  /app/templates
 COPY --from=builder /go/src/github.com/ovh/utask/plugins /app/plugins
