--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,9 @@ script:
 deploy:
   provider: releases
   api_key: $GITHUB_TOKEN
-  file: install-utask.sh
+  file: 
+    - install-utask.sh
+    - utask
   skip_cleanup: true
   draft: true
   on:
