Check if all scripts are executable
Signed-off-by: Valentin Pichard <7628998+w3st3ry@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,9 @@ ui/editor/node_modules
 config/*
 !config/README.md
 
+# Related to scripts
+scripts/*
+!scripts/.gitkeep
+
 # Related to Goreleaser
 dist/
