--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -11,44 +11,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.0",
-    "@angular/common": "~8.2.0",
-    "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
-    "@angular/forms": "~8.2.0",
-    "@angular/platform-browser": "~8.2.0",
-    "@angular/platform-browser-dynamic": "~8.2.0",
-    "@angular/router": "~8.2.0",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "ace": "^1.3.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "brace": "^0.11.1",
-    "d3": "^5.11.0",
-    "dagre-d3": "^0.6.3",
-    "ejs": "^2.7.1",
+    "chart.js": "^2.9.3",
+    "d3": "^5.14.0",
+    "dagre-d3": "^0.6.4",
+    "ejs": "^2.7.4",
     "jquery": "^3.4.1",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "ngx-chips": "^2.0.2",
-    "ngx-infinite-scroll": "^8.0.0",
-    "rxjs": "~6.4.0",
-    "tippy.js": "^5.1.0",
-    "tipsy": "^1.0.0",
+    "ngx-chips": "^2.1.0",
+    "ngx-infinite-scroll": "^8.0.1",
+    "rxjs": "~6.5.3",
+    "tippy.js": "^5.1.2",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.0",
-    "@angular/cli": "~8.2.0",
-    "@angular/compiler-cli": "~8.2.0",
-    "@angular/language-service": "~8.2.0",
+    "@angular/cli": "~8.3.2",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "~2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.2.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
