some fixs based on review
Signed-off-by: Valentin Pichard <7628998+w3st3ry@users.noreply.github.com>

--- a/engine/templates_tests/execScript.yaml
+++ b/engine/templates_tests/execScript.yaml
@@ -2,17 +2,13 @@ name: exec-script
 description: Executing a python script
 title_format: "[test] a simple task"
 
-inputs:
-- name: file
-  description: file path
-
 steps:
     stepOne:
         description: first step
         action:
             type: script
             configuration:
-                file: "{{.input.file}}"
+                file: ./../scripts/hello-world.sh
                 argv:
                   - world
                 timeout_seconds: "25"
