add needed comment
Signed-off-by: Valentin Pichard <7628998+w3st3ry@users.noreply.github.com>

--- a/engine/templates_tests/execScript.yaml
+++ b/engine/templates_tests/execScript.yaml
@@ -8,6 +8,7 @@ steps:
         action:
             type: script
             configuration:
+                # Only for testing purpose
                 file: ./../scripts/hello-world.sh
                 argv:
                   - world
