Improve comments in test template
Signed-off-by: Valentin Pichard <7628998+w3st3ry@users.noreply.github.com>

--- a/engine/templates_tests/execScript.yaml
+++ b/engine/templates_tests/execScript.yaml
@@ -12,7 +12,26 @@ steps:
         action:
             type: script
             configuration:
-                # This is only for testing purpose
+                #   ____________________
+                #  /                    \
+                # |  This is only for    |
+                # |   testing purpose    |
+                #  \____________________/
+                #          !  !
+                #          !  !
+                #          L_ !
+                #         / _)!
+                #        / /__L
+                #  _____/ (____)
+                #         (____)
+                #  _____  (____)
+                #       \_(____)
+                #          !  !
+                #          !  !
+                #          \__/
+                # This file param is valid only in a testing context
+                # In production, `file` will be prefixed by the utask.FScriptsFolder variable ("./scripts" by default)
+                # You can specify your file's path relative to that location
                 file: "./scripts_tests/hello-world.sh"
                 argv:
                   - "{{.input.argv}}"
