Plugin subtask: fix templating instructions (escape hyphens)
Signed-off-by: Thomas Schaffer <thomas.schaffer@corp.ovh.com>

--- a/engine/templates_tests/foreach.yaml
+++ b/engine/templates_tests/foreach.yaml
@@ -43,7 +43,7 @@ steps:
         conditions:
             - type: check
               if:
-                - value: '{{.step.this.output.concat}}'
+                - value: '{{ index .step "this" "output" "concat"}}'
                   operator: EQ
                   expected: foo-c-bar-c
               then:
