--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,4 @@ script:
 after_success:
   - $GOPATH/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN # upload coverage.out results to goveralls plateform
   - git reset --hard HEAD  # reset go.mod and go.sum, modified by make test-travis
-  - make run-goreleaser # run release process
+  - make run-goreleaser # run goreleaser process
