--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ script:
 after_success:
   - $GOPATH/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN # upload coverage.out results to goveralls plateform
   - git reset --hard HEAD  # reset go.mod and go.sum, modified by make test-travis
-  - make run-goreleaser # run goreleaser process
+  - test -n "${TRAVIS_TAG}" -a "${TRAVIS_GO_VERSION}" = "1.13" && make run-goreleaser # run goreleaser process
 
 jobs:
   include:
