--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -23,9 +23,11 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "ace": "^1.3.0",
+    "active-interval": "0.0.4",
     "bootstrap": "^4.4.1",
     "brace": "^0.11.1",
     "chart.js": "^2.9.3",
+    "convert-yaml": "^1.0.0",
     "d3": "^5.14.0",
     "dagre-d3": "^0.6.4",
     "ejs": "^2.7.4",
@@ -37,8 +39,8 @@
     "ngx-infinite-scroll": "^8.0.1",
     "rxjs": "~6.5.3",
     "tippy.js": "^5.1.2",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "tslib": "^1.11.1",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.0",
