--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -23,13 +23,14 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "active-interval": "0.0.4",
+    "bluebird": "^3.7.2",
     "bootstrap": "^4.4.1",
     "brace": "^0.11.1",
     "chart.js": "^2.9.3",
+    "convert-yaml": "^1.0.0",
     "d3": "^5.15.0",
     "dagre-d3": "^0.6.4",
-    "active-interval": "0.0.4",
-    "convert-yaml": "^1.0.0",
     "ejs": "^3.0.1",
     "jquery": "^3.4.1",
     "js-yaml": "^3.13.1",
@@ -47,6 +48,7 @@
     "@angular/cli": "^9.0.7",
     "@angular/compiler-cli": "^9.0.7",
     "@angular/language-service": "^9.0.7",
+    "@types/bluebird-global": "^3.5.12",
     "@types/jasmine": "~3.5.9",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^13.9.2",
