feat: variables value can be templated
Added some validation on Variables for templates, making sure that all
properties are correctly defined.

Signed-off-by: Romain Beuque <romain.beuque@corp.ovh.com>

--- a/engine/templates_tests/variables.yaml
+++ b/engine/templates_tests/variables.yaml
@@ -7,11 +7,25 @@ variables:
     2 + 2; // javascript
 - name: bidule
   value: 5
+- name: templated
+  value: "Hello {{ `World` }}!"
+- name: expressionCached
+  expression: >
+    4 + 2; // javascript
 steps:
     renderVariables:
         action:
             type: echo
-            configuration: 
-                output: 
+            configuration:
+                output:
                     truc:   "{{eval `truc`}}"
                     bidule: "{{eval `bidule`}}"
+                    templated: "{{eval `templated`}}"
+                    cached: "{{evalCache `expressionCached`}}"
+    renderVariablesWithCache:
+        dependencies: [renderVariables]
+        action:
+            type: echo
+            configuration:
+                output:
+                    cached: "{{evalCache `expressionCached`}}"
