fix(dashboard/ui): refresh home page / ergo: buttons
Signed-off-by: Simon Martinez <1263852+simonmartinez@users.noreply.github.com>

--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -11,48 +11,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.7",
-    "@angular/common": "^9.0.7",
-    "@angular/compiler": "^9.0.7",
-    "@angular/core": "^9.0.7",
-    "@angular/forms": "^9.0.7",
-    "@angular/localize": "^9.0.7",
-    "@angular/platform-browser": "^9.0.7",
-    "@angular/platform-browser-dynamic": "^9.0.7",
-    "@angular/router": "^9.0.7",
+    "@angular/animations": "^9.1.1",
+    "@angular/common": "^9.1.1",
+    "@angular/compiler": "^9.1.1",
+    "@angular/core": "^9.1.1",
+    "@angular/forms": "^9.1.1",
+    "@angular/localize": "^9.1.1",
+    "@angular/platform-browser": "^9.1.1",
+    "@angular/platform-browser-dynamic": "^9.1.1",
+    "@angular/router": "^9.1.1",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "@sentry/browser": "^5.15.4",
     "active-interval": "0.0.4",
     "bluebird": "^3.7.2",
     "bootstrap": "^4.4.1",
     "brace": "^0.11.1",
     "chart.js": "^2.9.3",
-    "convert-yaml": "^1.0.0",
-    "d3": "^5.15.0",
+    "convert-yaml": "^1.0.2",
+    "d3": "^5.15.1",
     "dagre-d3": "^0.6.4",
-    "ejs": "^3.0.1",
+    "ejs": "^3.0.2",
     "jquery": "^3.4.1",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "ngx-chips": "2.1.0",
     "ngx-infinite-scroll": "^8.0.1",
-    "rxjs": "^6.5.4",
-    "tippy.js": "^6.1.0",
+    "ngx-toastr": "^12.0.1",
+    "rxjs": "^6.5.5",
+    "tippy.js": "^6.1.1",
     "tslib": "^1.11.1",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.900.7",
-    "@angular/cli": "^9.0.7",
-    "@angular/compiler-cli": "^9.0.7",
-    "@angular/language-service": "^9.0.7",
+    "@angular/cli": "^9.1.0",
+    "@angular/compiler-cli": "^9.1.1",
+    "@angular/language-service": "^9.1.1",
     "@types/bluebird-global": "^3.5.12",
     "@types/jasmine": "~3.5.9",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^13.9.2",
-    "codelyzer": "^5.2.1",
+    "@types/node": "^13.11.0",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
@@ -62,7 +64,7 @@
     "karma-jasmine-html-reporter": "^1.5.3",
     "protractor": "~5.4.3",
     "ts-node": "~8.6.2",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.1",
     "typescript": "3.6.4"
   }
 }
