feat: add IN and NOTIN to step condition operators
These operators allows to check that a value is present or not
in a list of values. The allowed/disabled values are represented
as a comma-separated string.

Signed-off-by: William Poussier <william.poussier@gmail.com>
Co-Authored-By: Thomas Schaffer <thomas.schaffer@corp.ovh.com>

--- a/engine/templates_tests/stepCondition.yaml
+++ b/engine/templates_tests/stepCondition.yaml
@@ -108,3 +108,34 @@ steps:
               then:
                   this: OK
               message: OK
+    stepSix:
+        dependencies: [stepThree:ANY]
+        description: a check against a list of acceptable values
+        custom_states: [LIST_MATCH,LIST_NOMATCH]
+        action:
+            type: echo
+            configuration:
+                output:
+                    items: 'foo,bar'
+        conditions:
+            - type: check
+              if:
+                  - expected: foo
+                    operator: IN
+                    value: '{{.step.this.output.items}}'
+                    list_separator: ","
+              then:
+                  this: LIST_MATCH
+              message: List contains matching value
+            - type: check
+              if:
+                  - expected: {{.step.this.state}}
+                    operator: EQ
+                    value: 'LIST_MATCH'
+                  - expected: baz
+                    operator: NOTIN
+                    value: '{{.step.this.output.items}}'
+                    list_separator: ","
+              then:
+                  this: LIST_NOMATCH
+              message: List doesn't contains matching value
