Fix IN/NOT_IN unit tests
Signed-off-by: Thomas Schaffer <thomas.schaffer@corp.ovh.com>

--- a/engine/templates_tests/stepCondition.yaml
+++ b/engine/templates_tests/stepCondition.yaml
@@ -129,7 +129,7 @@ steps:
               message: List contains matching value
             - type: check
               if:
-                  - expected: {{.step.this.state}}
+                  - expected: '{{.step.this.state}}'
                     operator: EQ
                     value: 'LIST_MATCH'
                   - expected: baz
