--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -11,50 +11,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.1",
-    "@angular/common": "^9.1.1",
-    "@angular/compiler": "^9.1.1",
-    "@angular/core": "^9.1.1",
-    "@angular/forms": "^9.1.1",
-    "@angular/localize": "^9.1.1",
-    "@angular/platform-browser": "^9.1.1",
-    "@angular/platform-browser-dynamic": "^9.1.1",
-    "@angular/router": "^9.1.1",
+    "@angular/animations": "^9.1.9",
+    "@angular/common": "^9.1.9",
+    "@angular/compiler": "^9.1.9",
+    "@angular/core": "^9.1.9",
+    "@angular/forms": "^9.1.9",
+    "@angular/localize": "^9.1.9",
+    "@angular/platform-browser": "^9.1.9",
+    "@angular/platform-browser-dynamic": "^9.1.9",
+    "@angular/router": "^9.1.9",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
-    "@sentry/browser": "^5.15.4",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@sentry/browser": "^5.16.1",
     "active-interval": "0.0.4",
     "bluebird": "^3.7.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "brace": "^0.11.1",
     "chart.js": "^2.9.3",
     "convert-yaml": "^1.0.2",
-    "d3": "^5.15.1",
+    "d3": "^5.16.0",
     "dagre-d3": "^0.6.4",
-    "ejs": "^3.0.2",
-    "jquery": "^3.5.0",
-    "js-yaml": "^3.13.1",
+    "ejs": "^3.1.3",
+    "jquery": "^3.5.1",
+    "js-yaml": "^3.14.0",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0",
+    "moment": "^2.26.0",
     "ngx-chips": "2.1.0",
-    "ngx-infinite-scroll": "^8.0.1",
-    "ngx-toastr": "^12.0.1",
+    "ngx-infinite-scroll": "^8.0.2",
+    "ngx-toastr": "^12.1.0",
     "q": "^1.5.1",
     "rxjs": "^6.5.5",
-    "tippy.js": "^6.1.1",
-    "tslib": "^1.11.1",
+    "tippy.js": "^6.2.3",
+    "tslib": "^1.13.0",
+    "utask-lib": "0.0.40",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.7",
-    "@angular/cli": "^9.1.0",
-    "@angular/compiler-cli": "^9.1.1",
-    "@angular/language-service": "^9.1.1",
+    "@angular-devkit/build-angular": "^0.901.7",
+    "@angular/cli": "^9.1.7",
+    "@angular/compiler-cli": "^9.1.9",
+    "@angular/language-service": "^9.1.9",
     "@types/bluebird-global": "^3.5.12",
     "@types/jasmine": "~3.5.9",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^13.11.0",
+    "@types/node": "^13.13.10",
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -62,10 +63,10 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine": "~3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "~5.4.3",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
     "ts-node": "~8.6.2",
-    "tslint": "^6.1.1",
+    "tslint": "^6.1.2",
     "typescript": "3.6.4"
   }
 }
