--- a/ui/dashboard/tsconfig.spec.json
+++ b/ui/dashboard/tsconfig.spec.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "outDir": "./out-tsc/spec",
     "types": [
       "jasmine",
