adds a function to wrap the execution of a step
Signed-off-by: Yannick Briffa <yannick.briffa@corp.ovh.com>

--- a/engine/functions_tests/echo-prehook.yaml
+++ b/engine/functions_tests/echo-prehook.yaml
@@ -9,3 +9,4 @@ action:
   configuration:
     output:
       value: 'Hello {{ .pre_hook.output.value }} !'
+      coalesce: 'Coalesce {{ coalesce .pre_hook.output.notExist .pre_hook.output.value }}!'
