rework base_output and templated_output to a common output
Signed-off-by: Yannick Briffa <yannick.briffa@corp.ovh.com>

--- a/engine/functions_tests/echo-templated-output.yaml
+++ b/engine/functions_tests/echo-templated-output.yaml
@@ -6,5 +6,7 @@ action:
       value: 'Hello world!'
       name: 'Doe'
       firstname: 'John'
-  templated_output:
-    full_name: "{{ .step.this.output.firstname }} {{ .step.this.output.name }}"
+  output:
+    strategy: template
+    format:
+      full_name: "{{ .step.this.output.firstname }} {{ .step.this.output.name }}"
