--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -11,19 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.9",
-    "@angular/common": "^9.1.9",
-    "@angular/compiler": "^9.1.9",
-    "@angular/core": "^9.1.9",
-    "@angular/forms": "^9.1.9",
-    "@angular/localize": "^9.1.9",
-    "@angular/platform-browser": "^9.1.9",
-    "@angular/platform-browser-dynamic": "^9.1.9",
-    "@angular/router": "^9.1.9",
+    "@angular/animations": "^9.1.12",
+    "@angular/common": "^9.1.12",
+    "@angular/compiler": "^9.1.12",
+    "@angular/core": "^9.1.12",
+    "@angular/forms": "^9.1.12",
+    "@angular/localize": "^9.1.12",
+    "@angular/platform-browser": "^9.1.12",
+    "@angular/platform-browser-dynamic": "^9.1.12",
+    "@angular/router": "^9.1.12",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
-    "@sentry/browser": "^5.16.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "@sentry/browser": "^5.19.2",
     "active-interval": "0.0.4",
     "bluebird": "^3.7.2",
     "bootstrap": "^4.5.0",
@@ -35,36 +35,36 @@
     "ejs": "^3.1.3",
     "jquery": "^3.5.1",
     "js-yaml": "^3.14.0",
-    "lodash": "^4.17.15",
-    "moment": "^2.26.0",
+    "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "ngx-chips": "2.1.0",
     "ngx-infinite-scroll": "^8.0.2",
     "ngx-toastr": "^12.1.0",
     "q": "^1.5.1",
-    "rxjs": "^6.5.5",
-    "tippy.js": "^6.2.3",
+    "rxjs": "^6.6.0",
+    "tippy.js": "^6.2.5",
     "tslib": "^1.13.0",
-    "utask-lib": "0.0.40",
+    "utask-lib": "0.0.54",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.7",
-    "@angular/cli": "^9.1.7",
-    "@angular/compiler-cli": "^9.1.9",
-    "@angular/language-service": "^9.1.9",
+    "@angular-devkit/build-angular": "^0.901.11",
+    "@angular/cli": "^9.1.11",
+    "@angular/compiler-cli": "^9.1.12",
+    "@angular/language-service": "^9.1.12",
     "@types/bluebird-global": "^3.5.12",
-    "@types/jasmine": "~3.5.9",
+    "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^13.13.10",
+    "@types/node": "^13.13.14",
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^5.4.4",
+    "protractor": "^7.0.0",
     "ts-node": "~8.6.2",
     "tslint": "^6.1.2",
     "typescript": "3.6.4"
