fix: Add functions/ folder to install-script
Signed-off-by: Romain Beuque <romain.beuque@corp.ovh.com>

--- a/hack/Dockerfile-child
+++ b/hack/Dockerfile-child
@@ -8,6 +8,7 @@ RUN make
 FROM ovhcom/utask:${UTASK_VERSION}
 
 COPY templates  /app/templates
+COPY functions  /app/functions
 COPY --from=builder /go/src/github.com/ovh/utask/plugins /app/plugins
 COPY --from=builder /go/src/github.com/ovh/utask/init    /app/init
 COPY --from=builder /go/src/github.com/ovh/utask/utask   /app/utask
