--- a/engine/templates_tests/loopCondition.yaml
+++ b/engine/templates_tests/loopCondition.yaml
@@ -15,12 +15,13 @@ inputs:
 steps:
     fibonacci:
         description: generate the list
+        max_retries: -1
         conditions:
-            - type: loop
-              if:
-                - value: '{{ len (fromJson .step.this.output.list) }}'
-                  operator: LE
-                  expected: '{{ .input.N }}'
+        - type: loop
+          if:
+          - value: '{{ len (fromJson .step.this.output.list) }}'
+            operator: LE
+            expected: '{{ .input.N }}'
         action:
             type: echo
             configuration:
@@ -32,13 +33,13 @@ steps:
     join:
         description: join the numbers using the separator
         dependencies:
-            - fibonacci
+        - fibonacci
         conditions:
-            - type: loop
-              if:
-                - value: '{{ len (fromJson .step.this.output.list) }}'
-                  operator: GT
-                  expected: 1
+        - type: loop
+          if:
+          - value: '{{ len (fromJson .step.this.output.list) }}'
+            operator: GT
+            expected: 1
 
         action:
             type: echo
