--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -11,6 +11,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/material": "^9.2.4",
+    "@angular/cdk": "^9.2.4",
     "@angular/animations": "^9.1.9",
     "@angular/common": "^9.1.9",
     "@angular/compiler": "^9.1.9",
@@ -29,7 +31,6 @@
     "bootstrap": "^4.5.0",
     "brace": "^0.11.1",
     "chart.js": "^2.9.3",
-    "convert-yaml": "^1.0.5",
     "d3": "^5.16.0",
     "dagre-d3": "^0.6.4",
     "ejs": "^3.1.3",
@@ -44,8 +45,9 @@
     "rxjs": "^6.5.5",
     "tippy.js": "^6.2.3",
     "tslib": "^1.13.0",
-    "utask-lib": "0.0.40",
-    "zone.js": "^0.10.3"
+    "zone.js": "^0.10.3",
+    "convert-yaml": "^1.0.5",
+    "utask-lib": "0.2.24"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.12",
@@ -67,6 +69,6 @@
     "protractor": "^5.4.4",
     "ts-node": "~8.6.2",
     "tslint": "^6.1.2",
-    "typescript": "3.6.4"
+    "typescript": "~3.8.0"
   }
 }
