Delete LOOP, add RETRY_NOW state, rework delay
Implement the requested changes:
- Remove the LOOP condition
- Add the RETRY_NOW state
- Remove the `morejson` package and its associated test
- Validate `execution_delay` in `step.ValidAndNormalize`
- Move the `time.Sleep` to prevent deadlocks
- Adapt the old .yaml tests

Signed-off-by: Alexandre Szymocha <alexandre@szymocha.com>

--- a/engine/templates_tests/retryNowMaxRetry.yaml
+++ b/engine/templates_tests/retryNowMaxRetry.yaml
@@ -9,11 +9,13 @@ steps:
         description: counts to infinity
         max_retries: 41
         conditions:
-        - type: loop
+        - type: check
           if:
           - value: 0
             operator: EQ
             expected: 0
+          then:
+            this: RETRY_NOW
         action:
             type: echo
             configuration:
