--- a/ui/dashboard/tsconfig.json
+++ b/ui/dashboard/tsconfig.json
@@ -17,7 +17,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "utask-lib": [
+        "dist/utask-lib/utask-lib",
+        "dist/utask-lib"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
