--- a/ui/dashboard/angular.json
+++ b/ui/dashboard/angular.json
@@ -15,8 +15,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path": "./extra-webpack.config.js"
+            },
             "outputPath": "dist/utask-ui",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -29,7 +32,11 @@
             "styles": [
               "src/styles.sass"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "active-interval",
+              "chart.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -57,7 +64,7 @@
           }
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
             "proxyConfig": "proxy.conf.js",
             "browserTarget": "utask-ui:build"
@@ -116,6 +123,47 @@
           }
         }
       }
-    }},
+    },
+    "utask-lib": {
+      "projectType": "library",
+      "root": "projects/utask-lib",
+      "sourceRoot": "projects/utask-lib/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/utask-lib/tsconfig.lib.json",
+            "project": "projects/utask-lib/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/utask-lib/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/utask-lib/src/test.ts",
+            "tsConfig": "projects/utask-lib/tsconfig.spec.json",
+            "karmaConfig": "projects/utask-lib/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/utask-lib/tsconfig.lib.json",
+              "projects/utask-lib/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
   "defaultProject": "utask-ui"
 }
