--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -7,68 +7,73 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:stats": "ng build --prod --stats-json",
+    "build:analyse": "webpack-bundle-analyzer dist/utask-ui/stats.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/material": "^9.2.4",
-    "@angular/cdk": "^9.2.4",
-    "@angular/animations": "^9.1.9",
-    "@angular/common": "^9.1.9",
-    "@angular/compiler": "^9.1.9",
-    "@angular/core": "^9.1.9",
-    "@angular/forms": "^9.1.9",
-    "@angular/localize": "^9.1.9",
-    "@angular/platform-browser": "^9.1.9",
-    "@angular/platform-browser-dynamic": "^9.1.9",
-    "@angular/router": "^9.1.9",
-    "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
-    "@sentry/browser": "^5.16.1",
+    "@angular/animations": "11.0.0",
+    "@angular/cdk": "11.0.0",
+    "@angular/common": "11.0.0",
+    "@angular/compiler": "11.0.0",
+    "@angular/core": "11.0.0",
+    "@angular/forms": "11.0.0",
+    "@angular/localize": "11.0.0",
+    "@angular/material": "11.0.0",
+    "@angular/platform-browser": "11.0.0",
+    "@angular/platform-browser-dynamic": "11.0.0",
+    "@angular/router": "11.0.0",
+    "@fortawesome/fontawesome": "1.1.8",
+    "@fortawesome/fontawesome-free-solid": "5.0.13",
+    "@ng-bootstrap/ng-bootstrap": "8.0.0",
+    "@sentry/browser": "5.27.4",
+    "@types/lodash-es": "4.17.3",
     "active-interval": "0.0.4",
-    "bluebird": "^3.7.2",
-    "bootstrap": "^4.5.0",
-    "brace": "^0.11.1",
-    "chart.js": "^2.9.3",
-    "d3": "^5.16.0",
-    "dagre-d3": "^0.6.4",
-    "ejs": "^3.1.3",
-    "jquery": "^3.5.1",
-    "js-yaml": "^3.14.0",
-    "lodash": "^4.17.19",
-    "moment": "^2.26.0",
-    "ngx-chips": "2.1.0",
-    "ngx-infinite-scroll": "^8.0.2",
-    "ngx-toastr": "^12.1.0",
-    "q": "^1.5.1",
-    "rxjs": "^6.5.5",
-    "tippy.js": "^6.2.3",
-    "tslib": "^1.13.0",
-    "zone.js": "^0.10.3",
-    "convert-yaml": "^1.0.5",
-    "utask-lib": "0.2.24"
+    "bluebird": "3.7.2",
+    "bootstrap": "4.5.3",
+    "brace": "0.11.1",
+    "chart.js": "2.9.4",
+    "convert-yaml": "1.0.5",
+    "dagre-d3": "0.6.4",
+    "ejs": "3.1.5",
+    "jquery": "3.5.1",
+    "js-yaml": "3.14.0",
+    "lodash-es": "4.17.15",
+    "moment": "2.29.1",
+    "ngx-chips": "2.2.2",
+    "ngx-infinite-scroll": "10.0.0",
+    "ngx-toastr": "13.1.0",
+    "q": "1.5.1",
+    "rxjs": "6.6.3",
+    "tippy.js": "6.2.7",
+    "tslib": "2.0.3",
+    "zone.js": "0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.12",
-    "@angular/cli": "^9.1.7",
-    "@angular/compiler-cli": "^9.1.9",
-    "@angular/language-service": "^9.1.9",
-    "@types/bluebird-global": "^3.5.12",
-    "@types/jasmine": "~3.5.9",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^13.13.10",
-    "codelyzer": "^5.2.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.1",
-    "karma-jasmine": "~3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^5.4.4",
-    "ts-node": "~8.6.2",
-    "tslint": "^6.1.2",
-    "typescript": "~3.8.0"
+    "@angular-builders/custom-webpack": "10.0.1",
+    "@angular-devkit/build-angular": "0.1100.1",
+    "@angular-devkit/build-ng-packagr": "0.1002.0",
+    "@angular/cli": "11.0.1",
+    "@angular/compiler-cli": "11.0.0",
+    "@angular/language-service": "11.0.0",
+    "@types/bluebird-global": "3.5.12",
+    "@types/jasmine": "3.6.1",
+    "@types/jasminewd2": "2.0.8",
+    "@types/node": "14.14.7",
+    "codelyzer": "6.0.1",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "6.0.0",
+    "karma": "5.2.3",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.5.4",
+    "ng-packagr": "11.0.2",
+    "protractor": "7.0.0",
+    "ts-node": "9.0.0",
+    "tslint": "6.1.2",
+    "typescript": "4.0.5",
+    "webpack-bundle-analyzer": "4.1.0"
   }
 }
