--- a/ui/editor/package.json
+++ b/ui/editor/package.json
@@ -11,47 +11,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.0",
-    "@angular/common": "^9.1.0",
-    "@angular/compiler": "^9.1.0",
-    "@angular/core": "^9.1.0",
-    "@angular/forms": "^9.1.0",
-    "@angular/localize": "^9.1.0",
-    "@angular/platform-browser": "^9.1.0",
-    "@angular/platform-browser-dynamic": "^9.1.0",
-    "@angular/router": "^9.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
-    "bootstrap": "^4.4.1",
-    "brace": "^0.11.1",
-    "convert-yaml": "^1.0.5",
-    "d3": "^5.15.0",
-    "dagre-d3": "^0.6.4",
-    "jquery": "^3.5.0",
-    "js-yaml": "^3.13.1",
-    "lodash": "^4.17.19",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.11.1",
-    "zone.js": "~0.10.3"
+    "@angular/animations": "11.0.0",
+    "@angular/common": "11.0.0",
+    "@angular/compiler": "11.0.0",
+    "@angular/core": "11.0.0",
+    "@angular/forms": "11.0.0",
+    "@angular/localize": "11.0.0",
+    "@angular/platform-browser": "11.0.0",
+    "@angular/platform-browser-dynamic": "11.0.0",
+    "@angular/router": "11.0.0",
+    "@ng-bootstrap/ng-bootstrap": "8.0.0",
+    "bootstrap": "4.5.3",
+    "brace": "0.11.1",
+    "convert-yaml": "1.0.5",
+    "d3": "6.2.0",
+    "dagre-d3": "0.6.4",
+    "jquery": "3.5.1",
+    "js-yaml": "3.14.0",
+    "lodash": "4.17.20",
+    "lodash-es": "4.17.15",
+    "rxjs": "6.6.3",
+    "tslib": "2.0.3",
+    "zone.js": "0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.12",
-    "@angular/cli": "^9.0.7",
-    "@angular/compiler-cli": "^9.0.7",
-    "@angular/language-service": "^9.0.7",
-    "@types/jasmine": "^3.5.10",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^13.9.2",
-    "codelyzer": "^5.2.1",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.1",
-    "karma-jasmine": "~3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "~5.4.3",
-    "ts-node": "~8.6.2",
-    "tslint": "~6.1.0",
-    "typescript": "3.6.4"
+    "@angular-devkit/build-angular": "0.1100.2",
+    "@angular/cli": "11.0.2",
+    "@angular/compiler-cli": "11.0.2",
+    "@angular/language-service": "11.0.2",
+    "@types/jasmine": "3.6.2",
+    "@types/jasminewd2": "2.0.8",
+    "@types/node": "14.14.9",
+    "codelyzer": "6.0.1",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "6.0.0",
+    "karma": "5.2.3",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.5.4",
+    "protractor": "7.0.0",
+    "ts-node": "9.0.0",
+    "tslint": "6.1.0",
+    "typescript": "4.0.5"
   }
 }
