--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -30,7 +30,6 @@
     "@sentry/browser": "5.27.4",
     "@types/lodash-es": "4.17.3",
     "active-interval": "0.0.4",
-    "bluebird": "3.7.2",
     "bootstrap": "4.5.3",
     "brace": "0.11.1",
     "chart.js": "2.9.4",
@@ -41,6 +40,7 @@
     "js-yaml": "3.14.0",
     "lodash-es": "4.17.15",
     "moment": "2.29.1",
+    "ng-zorro-antd": "10.1.2",
     "ngx-chips": "2.2.2",
     "ngx-infinite-scroll": "10.0.0",
     "ngx-toastr": "13.1.0",
