feat(ui): allow to switch to dark theme

--- a/ui/dashboard/angular.json
+++ b/ui/dashboard/angular.json
@@ -32,6 +32,11 @@
                 "glob": "**/*",
                 "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
                 "output": "/assets/"
+              },
+              {
+                "glob": "**/*.min.css",
+                "input": "./node_modules/ng-zorro-antd",
+                "output": "/assets/"
               }
             ],
             "styles": [
