refactor(ui): add new task page

--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -40,12 +40,11 @@
         "js-yaml": "3.14.0",
         "lodash-es": "4.17.15",
         "moment": "2.29.1",
-        "monaco-editor": "^0.21.2",
+        "monaco-editor": "0.21.2",
         "ng-zorro-antd": "10.1.2",
         "ngx-chips": "2.2.2",
         "ngx-infinite-scroll": "10.0.0",
         "ngx-toastr": "13.1.0",
-        "q": "1.5.1",
         "rxjs": "6.6.3",
         "tippy.js": "6.2.7",
         "tslib": "2.0.3",
